# silk-codec

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml.yml  ci.yml  publish.yml
examples/: audio_convert_test.rs  video_info.rs
silk-codec-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
silk-codec-ffi/examples/: c_api_smoke.c
silk-codec-ffi/src/: lib.rs
src/: ffmpeg_utils.rs  lib.rs  pcm.rs  silk.rs  video.rs
