[package]
name = "silk-codec"
version = "0.1.0"
edition = "2024"
description = "Multi-architecture silk-codec bindings for Rust"
repository = "https://github.com/Redmomn/silk-codec"
keywords = ["silk", "codec", "audio", "rust", "ffmpeg"]
readme = "README.md"
license = "MIT"
include = ["silk/"]

[dependencies]
bytes = "1.10.1"
thiserror = "2.0.17"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.39"
glob = "0.3.3"
