[package]
name = "silk-codec"
version = "0.1.0"
edition = "2024"
description = "Multi-architecture silk-codec bindings for Rust"
repository = "https://github.com/Redmomn/silk-codec"
keywords = ["silk", "codec", "audio", "rust", "ffmpeg"]
readme = "README.md"
license = "MIT"
exclude = ["silk/src/**/doc/", "silk/src/**/test/", "silk/src/**/test_vectors/"]

[features]
symphonia = ["dep:symphonia", "symphonia/all-formats", "symphonia/mpa", "symphonia/flac"]

[dependencies]
bytes = "1.10.1"
symphonia = { version = "0.5.4", optional = true, features = ["all-formats", "mpa", "flac"] }
thiserror = "2.0.17"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.39"
glob = "0.3.3"
