[package]
name = "silk-codec"
version = "0.1.0"
edition = "2024"
description = "Multi-architecture silk-codec bindings for Rust"
repository = "https://github.com/Redmomn/silk-codec"
keywords = ["silk", "codec", "audio", "rust", "ffmpeg"]
readme = "README.md"
license = "MIT"
exclude = ["silk/src/**/doc/", "silk/src/**/test/", "silk/src/**/test_vectors/", "test.wav"]

[features]
default = []
ffmpeg = ["dep:ffmpeg-next", "dep:tracing"]

[dependencies]
bytes = "1.10.1"
ffmpeg-next = { version = "8.0.0", optional = true }
thiserror = "2.0.17"
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }

[[example]]
name = "audio_convert_test"
required-features = ["ffmpeg"]

[[example]]
name = "video_info"
required-features = ["ffmpeg"]

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.39"
glob = "0.3.3"
